# robo_all_repo

./: frames_2026-05-02_17.45.05.gv
CV_robot/: requirements.txt
CV_robot/logs/: car_log.json  car_metrics.csv
CV_robot/src/: car_log.json  car_metrics.csv  main.py  main_2.py  main_3.py
automated-delivery-bot/src/my_bot/worlds/: my_world.world
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_bot/share/ament_index/resource_index/parent_prefix_path/: my_bot
install/my_bot/share/my_bot/: package.ps1  package.sh  package.xml
install/my_bot/share/my_bot/launch/: display.launch.py  gazebo.launch.py  rsp.launch.py
install/my_bot/share/my_bot/urdf/: my_bot.urdf  my_bot.urdf.save  my_bot.urdf.xacro
install/my_bot/share/my_bot/worlds/: empty.sdf  my_world.world
install/voice_robot_pkg/lib/voice_robot_pkg/: voice_node
install/voice_robot_pkg/share/voice_robot_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/my_bot/: package.xml  setup.py
src/my_bot/urdf/: my_bot.urdf
src/rf2o_laser_odometry/src/: CLaserOdometry2DNode.cpp
src/voice_nav_bridge/: package.xml
src/voice_nav_bridge/voice_nav_bridge/: simple_move.py
src/ydlidar_ros2_driver/: CMakeLists.txt
src/ydlidar_ros2_driver/launch/: ydlidar_launch.py
voice_robot/logs/: commands.json
voice_robot/src/: config.py  main.py
voice_robot_pkg/voice_nav_bridge/: setup.py
